# Odin

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  CTestTestfile.cmake  Makefile  Odin.cbp  cmake_install.cmake
CPM_modules/: Finddoctest.cmake
Odin/: main.cc  main.cpp
Odin.xcodeproj/: project.pbxproj
Odin.xcodeproj/xcuserdata/niclas.xcuserdatad/xcschemes/: xcschememanagement.plist
Odin/Odin/util/: Utility.cc
Odin/Odin/util/iters/: BoardIterator.h
Odin/engine/: Board.cc  Board.cpp  Board.h  Figure.cc  Figure.cpp  Figure.h  Link.cc  Link.h  Node.cc  Node.cpp  Node.h  Odin.cc  Odin.cpp  Odin.h  backup.txt  kinglogic.cc  knightlogic.cc  longrangepiecelogic.cc  movegenereration.cc  pawnlogic.cc  pawnlogic.cpp
Odin/uci/: uci.hpp
Odin/util/: Utility.cc  Utility.cpp  Utility.h
Odin/util/iters/: BoardIterator.cc  BoardIterator.h
Testing/: CMakeLists.txt
Testing/evaluations/: CMakeLists.txt  evaluations.cc
Testing/fentesting/: CMakeLists.txt  fentest.cc  fentest.cpp
Testing/moves/: CMakeLists.txt  bishopmoves.cc  kingmoves.cc  knightmoves.cc  pawnmoves.cc  pawnmoves.cpp  queenmoves.cc  rookmoves.cc
Testing/real_problems/: CMakeLists.txt  realproblems.cc
Testing/test_move_generation/: CMakeLists.txt  make_move_test.cc
cmake/: CPM.cmake  cpm.cmake
