include(CTEST)
include(doctest)

function(addTest testname)
add_executable(${testname} ${testname}.cc)
target_compile_features(${testname} PRIVATE cxx_std_17)
target_link_libraries(${testname} PUBLIC Engine PRIVATE doctest::doctest)
DOCTEST_DISCOVER_TESTS(${testname})
endfunction()

ADD_SUBDIRECTORY(fentesting)
ADD_SUBDIRECTORY(moves)
ADD_SUBDIRECTORY(test_move_generation)
ADD_SUBDIRECTORY(real_problems)
ADD_SUBDIRECTORY(evaluations)